--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "electron . ",
-    "package:win-32": "electron-packager ./ EOS --out=./build --platform=win32 --arch=ia32 --electron-version 2.0.3 --overwrite --asar --icon=icon/win/icon.ico",
+    "package:win-32": "electron-packager ./ 巨蚁优护 --out=./build --platform=win32 --arch=ia32 --electron-version 2.0.3 --overwrite --asar --icon=icon/win/icon.ico",
     "package:linux-64": "electron-packager ./ EOS --out=./build --platform=linux --arch=x64 --electron-version 2.0.3 --overwrite --asar --icon=icon/linux/icon.ico"
   },
   "author": "",
